RESOLVED FIXED219415
Context menu should be shown after a long timeout following image extraction
https://bugs.webkit.org/show_bug.cgi?id=219415
Summary Context menu should be shown after a long timeout following image extraction
Wenson Hsieh
Reported 2020-12-01 16:46:18 PST
Attachments
Patch (3.53 KB, patch)
2020-12-01 23:06 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-12-01 23:06:20 PST
EWS
Comment 2 2020-12-02 09:30:28 PST
Committed r270350: <https://trac.webkit.org/changeset/270350> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415191 [details].
Note You need to log in before you can comment on or make changes to this bug.